# SpartyGnomeGame

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile.doxy  SpartyGnomeApp.cpp  SpartyGnomeApp.h  main.cpp  pch.h  readme.md
.Docker/: Dockerfile  a
GameLib/: Background.cpp  Background.h  CMakeLists.txt  Door.cpp  Door.h  GameView.cpp  GameView.h  Gnome.cpp  Gnome.h  Grass.cpp  Grass.h  Item.cpp  Item.h  ItemPlatform.cpp  ItemPlatform.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  Money.cpp  Money.h  Picture.cpp  Picture.h  Platform.cpp  Platform.h  ScoreBoard.cpp  ScoreBoard.h  Snow.cpp  Snow.h  Stadium.cpp  Stadium.h  StadiumView.cpp  StadiumView.h  Stanley.cpp  Stanley.h  TreasureBox.cpp  TreasureBox.h  Vector.cpp  Vector.h  Villain.cpp  (+20 more)
GameLib/data/levels/: level0.xml  level1.xml
Tests/: CMakeLists.txt  GnomeTest.cpp  GnomeTest.h  ItemTest.cpp  MoneyTest.cpp  StadiumTest.cpp  StanleyTest.cpp  TreasureBoxTest.cpp  VillainTest.cpp  gtest_main.cpp
data/levels/: level0.xml  level2.xml  level3.xml
